--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="design.css">
-    <title>TestSite</title>
+    <meta charset="utf-8"/>
+    <title>PONG</title>
+    <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='bootstrap.css'>
+    <link rel='stylesheet' href='style.css'>
   </head>
   <body>
+    <nav>
+      <div class='container'>
+        <ul class='menu-main'>
+          <li><a href='#'>Home</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class='spacer'></div>
     <h1 id="Score">0:0</h1>
     <canvas id="playfield" width="300" height="200" style="border:1px solid #000000;"></canvas>
     <p id="epsilon">epsilon:1</p>
