--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8"/>
     <title>PONG</title>
-    <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='bootstrap.css'>
     <link rel='stylesheet' href='style.css'>
   </head>
@@ -16,20 +15,22 @@
       </div>
     </nav>
     <div class='spacer'></div>
-    <h1 id="Score">0:0</h1>
-    <canvas id="playfield" width="300" height="200" style="border:1px solid #000000;"></canvas>
-    <p id="epsilon">epsilon:1</p>
-    <p id="lastState">lastStateAction:1</p>
-    <p id="iteration">iteration:0</p>
-    <p id="bestTime">bestTime:0</p>
-    <p id="storageLength">storageLength:0</p>
-    <p id="stored">stored:0</p>
-    <p id="iterationAverage">nothing</p>
-    <script src="gameLoop.js"></script>
-    <script>
-      setInterval(mainLoop, 0);
-      document.addEventListener("keydown", addKey);
-      document.addEventListener("keyup", removeKey);
-    </script>
+    <div class='pong'>
+      <h1 id="Score">0:0</h1>
+      <canvas id="playfield" width="300" height="200" style="border:1px solid #000000;"></canvas>
+      <p id="epsilon">epsilon:1</p>
+      <p id="lastState">lastStateAction:1</p>
+      <p id="iteration">iteration:0</p>
+      <p id="bestTime">bestTime:0</p>
+      <p id="storageLength">storageLength:0</p>
+      <p id="stored">stored:0</p>
+      <p id="iterationAverage">nothing</p>
+      <script src="gameLoop.js"></script>
+      <script>
+        setInterval(mainLoop, 0);
+        document.addEventListener("keydown", addKey);
+        document.addEventListener("keyup", removeKey);
+      </script>
+    </div>
   </body>
 </html>
