--- a/play-yourself.html
+++ b/play-yourself.html
@@ -10,14 +10,14 @@
     <nav>
       <div class='container'>
         <ul class='menu-main'>
-          <li><a href='/pong-ai.github.io/index.html'>PONG</a></li>
-          <li><a href='/pong-ai.github.io/epsilon.html'>Epsilon</a></li>
-          <li><a href='/pong-ai.github.io/play-yourself.html'>Play Yourself</a></li>
+          <li><a href='/pong-ai.github.io/index.html'>PONG</a></li> 
+          <li><a href='/pong-ai.github.io/epsilon.html'>Epsilon</a></li> 
+          <li><a href='/pong-ai.github.io/play-yourself.html'>Play it Yourself</a></li> 
         </ul>
       </div>
     </nav>
     <div class='spacer'></div>
-    <div class='homepageTitle'>Lorem Ipsum</div>
+    <div class='text-center page-title'>Play Against The AI Yourself</div>
     <div class='pong'>
         <canvas class='playfield' id="playfield" width="750" height="500" style="border:1px solid #000000;"></canvas> <br>
         
