--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <nav>
       <div class='container'>
         <ul class='menu-main'>
-          <li><a href='/pong-ai.github.io/index.html'>PONG</a></li>
-          <li><a href='/pong-ai.github.io/epsilon.html'>Epsilon</a></li>
-          <li><a href='/pong-ai.github.io/play-yourself.html'>Play Yourself</a></li>
+          <li><a href='/pong-ai.github.io/index.html'>PONG</a></li> 
+          <li><a href='/pong-ai.github.io/epsilon.html'>Epsilon</a></li> 
+          <li><a href='/pong-ai.github.io/play-yourself.html'>Play it Yourself</a></li> 
         </ul>
       </div>
     </nav>
     <div class='spacer'></div>
-    <div class='homepageTitle'>Lorem Ipsum</div>
+    <div class='text-center page-title'>Lorem ipsum</div>
     <div class='pong'>
         <canvas class='playfield' id="playfield" width="750" height="500" style="border:1px solid #000000;"></canvas>
         <script src="playfield.js"></script>
         <script>
             localStorage.clear();
-            var playfield = new Playfield(document.getElementById('playfield'), document.getElementById('playfield').getContext("2d"), 1, 1.0001, 1, 1.000001, false, 2.5);
-            setInterval(mainLoop, 5, playfield, 0, 2);
+            var playfield = new Playfield(document.getElementById('playfield'), document.getElementById('playfield').getContext("2d"), 1, 1.001, 1, 1.001, false, 2.5);
+            setInterval(mainLoop, 0, playfield, 0, 2);
             document.addEventListener("keydown", addKey);
             document.addEventListener("keyup", removeKey);
         </script>
