--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav>
       <div class='container'>
         <ul class='menu-main'>
-          <li><a href='/pong/test/index.html'>PONG</a></li>
-          <li><a href='/pong/test/epsilon.html'>Epsilon</a></li>
-          <li><a href='/pong/test/play-yourself.html'>Play it Yourself</a></li>
+          <li><a href='/pong-ai.github.io/index.html'>PONG</a></li> 
+          <li><a href='/pong-ai.github.io/epsilon.html'>Epsilon</a></li> 
+          <li><a href='/pong-ai.github.io/play-yourself.html'>Play it Yourself</a></li> 
         </ul>
       </div>
     </nav>
