--- a/epsilon.html
+++ b/epsilon.html
@@ -97,7 +97,7 @@
           <br>For training AI to play pong you can get away with having a very fast decreasing Epsilon value most of the time. This is because for the simple AI there are only 3 possible game-states and only 3 possible actions. That comes out to 9 possible state-action pairs. Because the number of state-action pairs is so low you can get away with a fast decreasing epsilon value and not hit a local maximum. But for our complex ai which has 3600 state-action pairs having an epsilon that decreases that fast will result in a local maximum. 
         </p>
         <p class='text'>
-          
+          <br><br>Link to next part / conclusion <a href='/pong-ai.github.io/conclusion.html'>Here</a>
         </p>
     </div>
     <div class='footer'></div>
