--- a/conclusion.html
+++ b/conclusion.html
@@ -45,6 +45,9 @@
       </div>
     </div>
     <div id='spacer1'></div>
-    <div class='footer'></div>
+    <div class='footer'>
+        
+
+    </div>
   </body>
 </html>
