--- a/conclusion.html
+++ b/conclusion.html
@@ -44,10 +44,8 @@
         </script>
       </div>
     </div>
-    <div id='spacer1'></div>
     <div class='footer'>
-        
-
-    </div>
+      <br>This website was created by Karsjen Koop and Jonas Scholz. We are proud to present a website that only contains features (and no bugs).
+</div>
   </body>
 </html>
