--- a/epsilon.html
+++ b/epsilon.html
@@ -100,6 +100,8 @@
           <br><br>Link to next part / conclusion <a href='/pong-ai.github.io/conclusion.html'>Here</a>
         </p>
     </div>
-    <div class='footer'></div>
+    <div class='footer'>
+      <br>This website was created by Karsjen Koop and Jonas Scholz. We are proud to present a website that only contains features (and no bugs).
+    </div>  
   </body>
 </html>
