--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
       </p>
 
     </div>
-    <div class='footer'></div>
+    <div class='footer'>
+      <br>This website was created by Karsjen Koop and Jonas Scholz. We are proud to present a website that only contains features (and no bugs).
+    </div>
   </body>
 </html>
